# wav2vec2_finetune_flash

./: .gitignore  README.md  finetune.py  pyproject.toml  requirements.txt  run_finetune.sh
core/: aug_transformer.py  callbacks.py  config.py  metrics.py
